# stock_analysis

./: .gitignore  README.md  main.py  pyproject.toml
.devcontainer/: devcontainer.json  post-create.sh
core/: buy_sell.py  find_uptrend.py
data/client/: config.py  nse.py  reference_files.py
data/provider/: config.py  fsutils.py
templates/: app.json
